# NodeImageProcessor

./: .gitignore  CMakeLists.txt  README.md
include/: BlendNode.h  BlurNode.h  BrightnessContrastNode.h  ColorChannelSplitterNode.h  ConvolutionFilterNode.h  EdgeDetectionNode.h  ImageInputNode.h  MainWindow.h  Node.h  NodeEdge.h  NodeGraph.h  NodeItem.h  NoiseGenerationNode.h  OutputNode.h  ThresholdNode.h
src/: BlendNode.cpp  BlurNode.cpp  BrightnessContrastNode.cpp  ColorChannelSplitterNode.cpp  ConvolutionFilterNode.cpp  EdgeDetectionNode.cpp  ImageInputNode.cpp  MainWindow.cpp  NodeEdge.cpp  NodeGraph.cpp  NodeItem.cpp  NoiseGenerationNode.cpp  OutputNode.cpp  ThresholdNode.cpp  main.cpp
